# dscoding-projects

./: .gitignore  README.md  Untitled.rtf  poetry.md  pyenv.md
Akash.Mittal/: Project_Description  Test.py
Alina.Imansakipova/: alinaalina.rtf
Alina.Imansakipova/hotel-project/: availability allocation.py  notebook.ipynb  pyproject.toml  randomallocation.py  satisfactionpercentage.py
Alina.Imansakipova/hotel-project/hotel_project/final/: __init__.py  availability_allocation_class.py  output.py  preferences_allocation_class.py  price_allocation_class.py  random_allocation_class.py  streamlit_app.py
Alina.Imansakipova/hotel-project/tests/: availability allocation.py  preferences allocation.py  price allocation.py  random allocation.py  vizualization.py
Damir.Uvayev/: main.py  pyproject.toml
Damir.Uvayev/modules/: RouteFinder.py  TemperatureDataProcessor.py  TemperatureVisualizer.py  data_processing.py  routing.py  utils.py  visualization.py
Inas.elkouch/: 1.FINAL_MAP.ipynb  3.new traveler's path.ipynb  ToRedo.ipynb
Karan.Kooshavar/: all_qiuzable_roles.csv  main.py  quiz.py
Nazar.Liubas/: Preliminary_data_analysis.ipynb  README.md  city.py  requirements.txt
Nikita Olefir/: README.md
Nikita.Olefir/: .gitignore  README.md
Samaher.Brahem/: Draft.py  FocusedDraft.ipynb  PythonFile.py  README.md  SB_PyProj_21_10.ipynb  app.py  data.py  data_manager.py  draft.ipynb  final_presentation.ipynb  game_scores.json  main.py  playground.ipynb  quiz.py  quiz_st.py  quiz_st_bu.py  requirements.txt  usage.ipynb
Viola.Awor/: Project plan.txt  data cleaning.py  hello.txt  weatherproject.ipynb
Vladislav_Kovalev/: .gitignore  main.py  readme.md  utils.py  viewer.ipynb
Yersultan.Akhmer/: main.py
Yersultan.Akhmer/generali-poetry/: pyproject.toml
Zhaksylyk.Tansykbay/: hello.py
aidana.akkaziyeva/: hellooo.txt
aidana.akkaziyeva/my_project/: pyproject.toml
aknur.abdikarimova/: pyproject.toml
aknur.abdikarimova/my_project/: easy questions.py  easy_questions.py  hard_questions.py  medium questions.py  medium_questions.py  pyproject.toml  questions.py  quiz.py  test.py
alice.zanni/: hello.pages
allocation_strategies/: __init__.py  allocation_strategies.ipynb
angelica.longo/: pyproject.toml
angelica.longo/angelica_project/angelicOne/: pyproject.toml
angelica.longo/angelica_project/angelicOne/angelicone/: Import data.ipynb  imported data.py
arianna.girotto/: Senza nome.rtf
ayagoz.shayakhmetova/: README.md  pyproject.toml
ayagoz.shayakhmetova/CISI-project/: README.md
ayagoz.shayakhmetova/CISI-project/cisi_project/: 1.py  2.py  5.py  7.py  dataI.py  import.ipynb  import_OOP.ipynb  new_movies.csv  new_movies_1.csv
ayagoz.shayakhmetova/generali-poetry/: README.md  pyproject.toml
beatrice.clavarino/: README.md  data-import.ipynb  pyproject.toml
chi.hoang/: Python.txt  pyproject.toml
daniele.piazza/: Project_description.txt  README.md  pyproject.toml
daniele.piazza/Project/: pyproject.toml
daniele.piazza/Project/project/: Untitled.ipynb  location.py  map.py  stream.py  update_location.py  visualize.py
daniele.piazza/Project/project/.streamlit/: config.toml
data/: polling_stations.xlsx  preferences.xlsx
dilsan.oksuzoglu/: final_projec_travel.ipynb  map.html  projec_travel.ipynb  project_functions.py  project_travel.ipynb
fabio.casalingo/exam_project/: README.md  map_kp1.html  mappa.html  pyproject.toml
fabio.casalingo/exam_project/.streamlit/: config.toml
fabio.casalingo/exam_project/exam_project/: app.py  backup_east.ipynb  mappa.html  methods.py  self_made_functions.py  streamlit_app.py  test1.ipynb  usage.ipynb
fabio.casalingo/exam_project/tests/: Test2.py  __init__.py  class1.ipynb  func_test.py  kepler.gl.json  mappa.html  output.geojson  prova.html  prova2.html  test1.py  test_map.ipynb  test_serio.py
franco.bonifacini/: READ ME.txt  Test.ipynb  priority.csv  usage.ipynb
juliamaria.wdowinska/: README.md  UDFs.py  app.py  back-up.txt  count_vectorizer.joblib  lr_classifier_count_vectorized.joblib  lr_classifier_tfidf_vectorized.joblib  main-jupyter.ipynb  main.py  mnb_classifier.joblib  mnb_classifier_count_vectorized.joblib  mnb_classifier_tfidf_vectorized.joblib  project-jupyter.ipynb  project.py  tfidf_vectorizer.joblib  vectorizer.joblib
leila.cielok/: pyproject.toml
lorenzo.mazzotti/QUIZ_PROJECT/: pyproject.toml
lorenzo.mazzotti/QUIZ_PROJECT/quiz_project/: main code.py
lorenzo.mazzotti/QUIZ_PROJECT/tests/: __init__.py
luca.sangiovanni/MyProject/: README.md  pyproject.toml
luca.sangiovanni/Project/: README.md  pyproject.toml
luca.sangiovanni/Project/project/: Notebook.ipynb  utils.py  visualization.py  web_app.py
luigi.gallo/: README.md  pyproject.toml
luigi.gallo/QuizProject/: IMDBest Quiz Class.ipynb  IMDBest Quiz.ipynb  pyproject.toml
maksim.kocheshkov/: README.rtf
maksim.kocheshkov/project/: pyproject.toml
maksim.kocheshkov/project/project/: Untitled.ipynb  data cleaning.ipynb  usage.ipynb
malika.makhmudova/: test.txt
mariasilvia.pancione/coding-project/: coding_project.ipynb  pyproject.toml
melany.gomez/: pyproject.toml  weather_project - Copia-Copy1.ipynb  weather_project - Copia.ipynb  weather_project.ipynb
michele.coaro/: Classes.py  RidgePlot.html  StreamOLIt.py  cities_dataframe_creation.ipynb  first_maps.ipynb  studiomap.py
mubarak.babslawal/: readme.md
niantong.zhang/: pyproject.toml
payam.soltanzadeh/: Prefered Allocation TEST.ipynb  Prefered Allocation.ipynb  Random ALLOCATION STRATEGY.py  hotel project.py
sara.peri/: ciaociao.rtf
stefano.chiesa/: prova.py
tesi.zace/: .python-version  hello.rtf
tesi.zace/hotel.project/: notebook.ipynb  pyproject.toml
tesi.zace/hotel.project/hotel/project/: data.py  notebook.ipynb
tommaso.premoli/: Import Data.ipynb  Project Description  Quiz - Project.ipynb  Quiz Project.ipynb  Quiz.ipynb  README.md  class.py  interface.py  methods.py  pyproject.toml
tommaso.premoli/Dataset/: IMDBDataset.xlsx  Movie_Dataset.xlsx
tommaso.premoli/Project/: Import Data.ipynb  pyproject.toml
tommaso.premoli/Quiz Project/: Quiz.ipynb  methods.py
(+224 files in other folders)
