[tool.poetry]
name = "wtpr"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
matplotlib = "^3.8.0"
pandas = "~2.1"
scipy = "^1.11.3"
python = "^3.9,<3.13"
geopandas = "^0.14.0"
geopy = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
