[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Aidana Akkaziyeva <aidana.akkaziyeva@nu.edu.kz>"]
readme = "README.md"

[tool.poetry.dependencies]
numpy = "^1.25.2"
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
