[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Daniele Piazza <daniele.piazza1@studenti.unimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
geopy = "^2.4.0"
plotly = "^5.17.0"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
