[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Daniele Piazza <daniele.piazza1@studenti.unimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
plotly = "^5.17.0"
nbformat = "^5.9.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
requests = "^2.31.0"
streamlit = "^1.28.1"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
