[tool.poetry]
name = "exam-project"
version = "0.1.0"
description = ""
authors = ["FabioCasalingo <casalingo.fabio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
geopy = "^2.4.0"
folium = "^0.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
cmd = ""