[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["lucasangio01 <146674237+lucasangio01@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
