[tool.poetry]
name = "project 4. Weather"
version = "0.1.0"
description = "The dataset that I'm going to use reports the temperature recorded in major cities around the world since 1750. Using this data, the project will provide an effective graphical visualization of the change in temperatures over time, highlighting the cities where the largest temperature ranges were recorded during different historical periods.

The program will also suggest, depending on the period considered, the best route to follow for a traveler who intends to move from Beijing to Los Angeles by moving step by step to the warmest city among the 3 closest to him."
authors = ["Maksim Kocheshkov <max.kocheshkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
