[tool.poetry]
name = "hotel-project"
version = "0.1.0"
description = ""
authors = ["teszc <tesizace@gmail.com>"]
readme = "README.md"
packages = [{include = "hotel"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
